api docs almost done
